sumo/tests/sumo/output/e3/errors/lane_missing__exit/errors.sumo
Error: Attribute 'lane' is missing in definition of e3-detector/exit '4/1to3/1'.
Quitting (on error).
